<resources>
    <string name="app_name">Kids2Pull</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hobby_type">Choose hobby type</string>
    <string name="WaitText">Please wait…</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="pick_time">Set Time</string>
    <string name="pick_date">Set Date</string>
    <!--contacts -->
    <string name="sign_up_failed">Sign Up failed</string>
    <string name="sign_up_succeed">User created</string>
    <string name="sign_in_failed">Sign In failed</string>
    <string name="sign_in_succeed">Succeed</string>
    <string name="general_pop_up_dialog_btn_no">NO</string>
    <string name="general_pop_up_dialog_btn_yes">YES</string>
    <string name="general_pop_up_dialog_title_notice">Notice</string>
    <string name="pick_up">Pick Up</string>
    <string name="drop">Drop</string>

    //SignUp Screen
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>

    <!-- Contact Screen -->
    <string name="ContactListFragment_SearchHint">Search Contact</string>
    <string name="ContactListFragment_SearchHint1">Type name or phone number</string>

    <string name="Permission_ContactsAccessDenayed">To browse your contacts, please enable contacts permissions in Settings</string>
    <string name="settings_title">Settings</string>
    <string name="inviteCarier_AddNewContactHint">Enter the mobile number of the person you want to invite then tap the plus sign</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="tit_loading">Loading...</string>
    <string name="pick_up_button">Pick Up</string>
    <string name="drop_off_button">Drop Off</string>
    <string name="location">Location</string>
    <string name="address">Roul walenberg 24 , Tel Aviv </string>
    <string name="hint_phone_number">phone number</string>
    <string name="notification">Notification</string>
    <string name="notification_detail">Pick me From the yard</string>
    <string name="repit_event">Repit event</string>
    <string name="repit_event_off">No</string>

</resources>
