<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:weightSum="10"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="8"
        android:layout_weight="8">

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/text_sign_up" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/text_sign_up" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/text_sign_up" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/text_sign_up" />

        <EditText
            android:id="@+id/phone_number_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:shadowRadius="2"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>