<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/abc_ic_search_api_mtrl_alpha" />

        <com.gettaxi.android.controls.chips.ChipsEditText
            android:id="@+id/txt_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/ContactListFragment_SearchHint"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword|textCapSentences|textMultiLine"
            android:maxLines="2"
            android:minHeight="60dp"
            android:padding="10dp"
            android:textColor="@color/guid_c9"
            android:textCursorDrawable="@null" />

        <ImageView
            android:id="@+id/img_add_new_contact"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_add_another"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scrollbars="vertical" />


        <LinearLayout
            android:id="@+id/permission_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/Permission_ContactsAccessDenayed"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btn_permission_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:minWidth="100dp"
                android:text="@string/settings_title" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/new_contact_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal">

            <TextView
                style="@style/text_c3_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="bottom"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:text="@string/inviteCarier_AddNewContactHint" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_gravity="right"
                android:src="@mipmap/ic_arrow_pointer_split"/>

        </FrameLayout>
    </FrameLayout>

</LinearLayout>